--- a/package.json
+++ b/package.json
@@ -13,18 +13,16 @@
 	"devDependencies": {
 		"@types/node": "^24.2.0",
 		"@types/pg": "^8.15.5",
-		"drizzle-kit": "^0.31.4",
 		"typescript": "^5.9.2"
 	},
 	"dependencies": {
 		"@biomejs/biome": "^2.1.4",
 		"@fastify/cors": "^11.1.0",
-		"drizzle-orm": "^0.44.4",
+		"@prisma/client": "^6.13.0",
 		"fastify": "^5.4.0",
 		"prisma": "^6.13.0",
 		"tsup": "^8.5.0",
 		"tsx": "^4.20.3",
-		"zod": "^4.0.16",
-		"postgres": "^3.4.7"
+		"zod": "^4.0.16"
 	}
 }
