--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "tsx watch --env-file=.env src/server.ts"
+		"dev": "tsx watch --env-file=.env src/server.ts",
+		"test": "vitest"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,6 +14,8 @@
 	"devDependencies": {
 		"@types/node": "^24.2.0",
 		"@types/pg": "^8.15.5",
+		"@vitest/coverage-v8": "^3.2.4",
+		"supertest": "^7.1.4",
 		"typescript": "^5.9.2",
 		"vitest": "^3.2.4"
 	},
