--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "tsx watch --env-file=.env src/server.ts",
-		"test": "vitest"
+		"test": "vitest",
+		"db:migrate": "prisma migrate dev",
+		"db:studio": "prisma studio"
 	},
 	"keywords": [],
 	"author": "",
